# ProjectManagement

./: .gitignore  CLAUDE.md  DESIGN.md  PROJECT_DESIGN.md  PROJECT_GRAPH.md  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  问题.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_remove_users.sql  003_runtime_status.sql  004_health_score.sql  005_workspaces.sql  006_workspace_layout.sql  007_agent_sessions.sql  008_browser_memory.sql  009_builds_templates_integrations.sql  010_agent_providers.sql  011_agent_tasks.sql  012_agent_sessions_extend.sql  013_memory.sql  014_memory_v2.sql  015_personal_notes.sql  016_knowledge_view_category.sql  017_notes_file_path.sql  018_recreate_project_tags.sql  019_fix_knowledge_view.sql  020_project_graph.sql  021_feature_groups.sql  022_project_soft_delete.sql  023_global_plan_session.sql  023_graph_ai_cache.sql  024_explorer_state.sql  025_mcp_servers.sql  026_project_audits.sql  027_performance_indexes.sql  028_custom_commands.sql  029_task_commits.sql  030_vulnerability_columns.sql
src-tauri/src/: db.rs  lib.rs  main.rs  path_guard.rs
src-tauri/src/commands/: brain.rs  dependencies.rs  detect.rs  documents.rs  files.rs  git.rs  health.rs  milestones.rs  mod.rs  projects.rs  repos.rs  search.rs  sessions.rs  tags.rs  tasks.rs  terminal.rs  timeline.rs  workspaces.rs
src-tauri/src/commands/git/: git.rs
src-tauri/src/commands/project/: audit.rs  (+11 more)
(+364 files in other folders)
